<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Activity23Converter">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_columnSpan="2"
        android:text="@string/converter1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView18" />

    <EditText
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/convert_number"
        android:layout_gravity="center_horizontal"
        android:inputType="numberDecimal"
        android:ems="10"
        android:gravity="center"
        android:layout_below="@+id/textView18"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <Spinner
        android:layout_gravity="center_horizontal"
        android:id="@+id/spinner_converter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/spinner_converter"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/convert_number"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="@string/converter2"
        android:layout_below="@+id/spinner_converter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:id="@+id/textView19" />

    <RadioGroup android:id="@+id/radio_conveter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp">
        <RadioButton android:id="@+id/radio_conveter1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conv_radio1"
            android:checked="false"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <RadioButton android:id="@+id/radio_conveter2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conv_radio2"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/radio_conveter1"
            android:layout_alignParentLeft="true" />

        <RadioButton android:id="@+id/radio_conveter3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conv_radio3"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/radio_conveter2"
            android:layout_alignParentLeft="true" />

        <RadioButton android:id="@+id/radio_conveter4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conv_radio4"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/radio_conveter3"
            android:layout_alignParentLeft="true" />

        <RadioButton android:id="@+id/radio_conveter5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conv_radio5"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/radio_conveter4"
            android:layout_alignParentLeft="true" />


        //2131558489

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:onClick="onButtonClickedConvert"
        android:text="@string/converter3"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/convert_number" />

    <TextView
        android:id="@+id/convert_result"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/converter5"
        android:textSize="20sp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp" />


</LinearLayout>
