<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:columnCount="2"
    tools:context=".ActivityCountStockGas">

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center_horizontal"
    android:text="@string/title1"
    android:textSize="18sp"
    android:layout_columnSpan="2"

        android:layout_row="1"
        android:layout_column="0"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="16sp"
    android:text="@string/title2"
        android:layout_row="2"
        android:layout_column="0"
        android:id="@+id/textView2"
        android:layout_alignBottom="@+id/plotnost"
        android:layout_alignParentStart="true" />

    <EditText
    android:id="@+id/plotnost"
    android:layout_gravity="right"
    android:ems="6"
    android:inputType="numberDecimal"
    android:textSize="16sp"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_below="@+id/textView"
        android:layout_toEndOf="@+id/textView" />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="16sp"
    android:text="@string/title3"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_alignBottom="@+id/davlen"
        android:layout_alignParentStart="true"
        android:id="@+id/textView7" />

    <EditText
    android:layout_gravity="right"
    android:ems="6"
    android:textSize="16sp"
    android:id="@+id/davlen"
    android:inputType="numberDecimal"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_below="@+id/plotnost"
        android:layout_toEndOf="@+id/textView" />

    <TextView
    android:layout_width="wrap_content"
    android:textSize="16sp"
    android:layout_height="wrap_content"
    android:text="@string/title4"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_alignBottom="@+id/temp"
        android:layout_alignParentStart="true"
        android:id="@+id/textView3" />

    <EditText
    android:id="@+id/temp"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_gravity="right"
    android:inputType="numberDecimal"
    android:ems="6"
    android:textSize="16sp"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_below="@+id/davlen"
        android:layout_alignStart="@+id/davlen" />

        <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="16sp"
    android:text="@string/title6"
        android:layout_row="6"
        android:layout_column="0"
            android:id="@+id/textView4"
            android:layout_alignBottom="@+id/dlina"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/textView3" />

    <EditText
    android:id="@+id/dlina"
    android:inputType="numberDecimal"
    android:layout_gravity="right"
    android:ems="6"
    android:textSize="16sp"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
        android:layout_row="6"
        android:layout_column="1"
        android:layout_below="@+id/textView8"
        android:layout_alignStart="@+id/temp" />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="16sp"
    android:text="@string/title7"
        android:layout_row="7"
        android:layout_column="0"
        android:id="@+id/textView5"
        android:layout_alignBottom="@+id/diametr"
        android:layout_alignParentStart="true" />

    <EditText
    android:id="@+id/diametr"
    android:layout_gravity="right"
    android:ems="6"
    android:textSize="16sp"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:inputType="numberDecimal"
        android:layout_row="7"
        android:layout_column="1"
        android:layout_below="@+id/dlina"
        android:layout_alignStart="@+id/dlina" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:text="@string/title9"
    android:textSize="18sp"
    android:layout_columnSpan="2"
    android:gravity="center"
    android:layout_gravity="center_horizontal"
        android:layout_row="9"
        android:layout_column="0"
        android:id="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/diametr" />

        <TextView
    android:id="@+id/supply"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/supply"
    android:textSize="20sp"
    android:layout_columnSpan="2"
    android:gravity="center"
    android:layout_gravity="center"
            android:layout_row="11"
        android:layout_column="0"
            android:layout_below="@+id/go"
            android:layout_alignEnd="@+id/textView7"
            android:layout_marginTop="17dp" />

    <CheckBox
            android:id="@+id/favotite_stockgas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite"
            android:onClick="onFavoriteClicked"
                android:layout_row="13"
                android:layout_column="1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

            <Button
            android:id="@+id/go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title10"
            android:onClick="count"
            android:layout_columnSpan="2"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
                android:layout_row="10"
                android:layout_column="0"
                android:layout_below="@+id/textView6"
                android:layout_alignStart="@+id/textView8"
                android:layout_marginTop="10dp" />

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title5"
            android:textSize="18sp"
            android:layout_columnSpan="2"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
                android:layout_row="5"
                android:layout_column="0"
                android:id="@+id/textView8"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />


</RelativeLayout>
