<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityCountCompressibilityFactor">

    <CheckBox
        android:id="@+id/favotite_compressfactor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorite"
        android:onClick="onFavoriteClicked"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/title1"
        android:textSize="18sp"
        android:id="@+id/textView13"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/title2"
        android:layout_row="2"
        android:layout_column="0"
        android:id="@+id/textView14"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView13"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editText3"
        android:layout_gravity="right"
        android:ems="6"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_alignBottom="@+id/textView14"
        android:layout_alignEnd="@+id/favotite_compressfactor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/title3"
        android:layout_row="3"
        android:layout_column="0"
        android:id="@+id/textView15"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView14"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        android:text="@string/title4"
        android:layout_row="4"
        android:layout_column="0"
        android:id="@+id/textView16"
        android:layout_below="@+id/textView15"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_gravity="right"
        android:ems="6"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_below="@+id/textView14"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/editText5"
        android:layout_gravity="right"
        android:ems="6"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_below="@+id/editText4"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/button2"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/editText5"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView17"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

</RelativeLayout>
